// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

12/29/2009
	r84 [pakpil]
	* Fixed the skillup control from my last commit. Sorry.
	* Added the new clif_skillcasting packet with the info recompilled from RE server.

12/28/2009
	r83 [Jobbie]
	* Merge eAthena Updates upto r14215

	r82 [pakpil]
	* Added the new official skillup control. Seems to be working as intended.
	- Added new packet 0x7e2 that shows a message from msgstringtable.txt and pass an integer as value.
		[NOTE: Take care with this packet, if you select a message with %s instead %d clients'll crash.]
	- Added new function to send packet 0x291 that shows a message from msgstringtable.txt.
	- Fixed all functions that use packet 0x291.

12/26/2009
	r78 [Jobbie]
	* Added and Confirmed some official UNT_* of new skills.
	* Added and Updated some SI_*'s that is used by skills and named it to its official value name.
	* Updated some skills to use its official SI's.
	* Fixed Comet to use 0x1de packet to display its effect rather than to use special effect.
	* Fixed White Imprison.
	- When status is active you cannot use items or skills.
    	- Cannot target non-enemy unit.

12/24/2009
	r74 [pakpil]
	* First implementation of SC_SHADOWFORM skill.

12/24/2009
	r73 [Jobbie]
	* When mounted with warg and used warg strike in WoE maps it will fail.
	* Fixed a typo in GN_CARTCANNON.

12/23/2009
	r72 [Jobbie]
	* Fixed burning causing map-error. Sorry I messed up the code. (followed up r70)	

	r71 [Jobbie]
	* Quick cleanuped. Did not notice there is a remain of code from scratch. (followed up r70)

	r70 [Jobbie]
	* Added the rest of Rangers skills. Does not include Camouflage, Sensitivekeen and Fearbreeze.
	* Removed Electric Shocker from Researchtrap list to increase range. Should not affect boss monster.
	* Fixed Epiclesis not giving properly the MaxHP bonus.

	r69 [pakpil]
	* Fixed Burning status: