@@ -448,6 +448,7 @@ void initChangeTables(void)
 	add_sc( RA_ICEBOUNDTRAP      , SC_FREEZING        );
 
 	set_sc( SC_SHADOWFORM        , SC__SHADOWFORM     , SI_SHADOWFORM      , SCB_NONE );
+	set_sc( SC_STRIPACCESSARY    , SC__STRIPACCESSORY    , SI_STRIPACCESSORY    , SCB_DEX|SCB_INT|SCB_LUK );
 
 	set_sc( GN_CARTBOOST         , SC_GN_CARTBOOST    , SI_CARTSBOOST      , SCB_SPEED|SCB_BATK );
 	add_sc( GN_THORNS_TRAP       , SC_THORNSTRAP );
@@ -3447,6 +3448,8 @@ static unsigned short status_calc_int(struct block_list *bl, struct status_chang
 		int_ = 50;
 	if(sc->data[SC_MANDRAGORA])
 		int_ -= 5 + 5 * sc->data[SC_MANDRAGORA]->val1;
+	if(bl->type == BL_MOB && sc->data[SC__STRIPACCESSORY])
+		int_ -= int_ * sc->data[SC__STRIPACCESSORY]->val2 / 100;
 
 	return (unsigned short)cap_value(int_,0,USHRT_MAX);
 }
@@ -3487,6 +3490,8 @@ static unsigned short status_calc_dex(struct block_list *bl, struct status_chang
 		dex += ((sc->data[SC_MARIONETTE2]->val4)>>8)&0xFF;
 	if(sc->data[SC_SPIRIT] && sc->data[SC_SPIRIT]->val2 == SL_HIGH && dex < 50)
 		dex  = 50;
+	if(bl->type == BL_MOB && sc->data[SC__STRIPACCESSORY])
+		dex -= dex * sc->data[SC__STRIPACCESSORY]->val2 / 100;
 
 	return (unsigned short)cap_value(dex,0,USHRT_MAX);
 }
@@ -3516,6 +3521,8 @@ static unsigned short status_calc_luk(struct block_list *bl, struct status_chang
 		luk = 50;
 	if(sc->data[SC_LAUDARAMUS])
 		luk += 4 + sc->data[SC_LAUDARAMUS]->val1;
+	if(bl->type == BL_MOB && sc->data[SC__STRIPACCESSORY])
+		luk -= luk * sc->data[SC__STRIPACCESSORY]->val2 / 100;
 
 	return (unsigned short)cap_value(luk,0,USHRT_MAX);
 }
@@ -5098,6 +5105,27 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 		if( bl->type != BL_MER )
 			return 0; // Stats only for Mercenaries
 	break;
+	case SC__STRIPACCESSORY:
+		if( sd )
+		{
+			int i = -1;
+			if( !(sd->unstripable_equip&EQI_ACC_L) )
+			{
+				i = sd->equip_index[EQI_ACC_L];
+				if( i >= 0 && sd->inventory_data[i] && sd->inventory_data[i]->type == IT_ARMOR )
+					pc_unequipitem(sd,i,3); //L-Accessory
+			}
+			if( !(sd->unstripable_equip&EQI_ACC_R) )
+			{
+				i = sd->equip_index[EQI_ACC_R];
+				if( i >= 0 && sd->inventory_data[i] && sd->inventory_data[i]->type == IT_ARMOR )
+					pc_unequipitem(sd,i,3); //R-Accessory
+			}
+			if( i < 0 )
+				return 0;
+		}
+		if (tick == 1) return 1; //Minimal duration: Only strip without causing the SC
+	break;
 	}
 
 	//Check for BOSS resistances
@@ -6240,6 +6268,10 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 			val4 = tick / 1000;
 			val_flag |= 1|2|4;
 			tick = 1000;
+			break;
+		case SC__STRIPACCESSORY:
+			if (!sd)
+				val2 = 20;
 			break;
 		case SC_GN_CARTBOOST:
 			if( val1 < 3 )
